update: Extract util methods

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -13,26 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from Agent import Agent\n",
     "from GridGraph import GridGraph\n",
-    "from DTMC_Utils import DTMC_Utils as utils"
+    "from DTMC_Utils import DTMC_Utils as Utils"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.369654469Z",
-     "start_time": "2024-10-18T14:32:54.342563613Z"
+     "end_time": "2024-10-18T14:42:27.845061535Z",
+     "start_time": "2024-10-18T14:42:27.409363852Z"
     }
    },
    "id": "9a691c4742471275"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "np.random.seed(12345)"
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.380166828Z",
-     "start_time": "2024-10-18T14:32:54.347260338Z"
+     "end_time": "2024-10-18T14:42:27.856626793Z",
+     "start_time": "2024-10-18T14:42:27.848465458Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "N = 3 # number of agents\n",
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.425367286Z",
-     "start_time": "2024-10-18T14:32:54.358434884Z"
+     "end_time": "2024-10-18T14:42:27.886190234Z",
+     "start_time": "2024-10-18T14:42:27.859946973Z"
     }
    },
    "id": "e797cec0da115198"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.440915615Z",
-     "start_time": "2024-10-18T14:32:54.411577707Z"
+     "end_time": "2024-10-18T14:42:27.983601653Z",
+     "start_time": "2024-10-18T14:42:27.888420707Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -149,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.447031573Z",
-     "start_time": "2024-10-18T14:32:54.442237312Z"
+     "end_time": "2024-10-18T14:42:27.987974393Z",
+     "start_time": "2024-10-18T14:42:27.984911788Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -167,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "P = utils.build_transition_matrix(grid_graph, S)"
+    "P = Utils.build_transition_matrix(grid_graph, S)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.514865106Z",
-     "start_time": "2024-10-18T14:32:54.446269087Z"
+     "end_time": "2024-10-18T14:42:27.997578504Z",
+     "start_time": "2024-10-18T14:42:27.988697879Z"
     }
    },
    "id": "118135f0be706b67"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -225,15 +225,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.525505520Z",
-     "start_time": "2024-10-18T14:32:54.487558152Z"
+     "end_time": "2024-10-18T14:42:28.061903728Z",
+     "start_time": "2024-10-18T14:42:27.999192264Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def build_graph_laplacian(actors):\n",
@@ -253,15 +253,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.525672485Z",
-     "start_time": "2024-10-18T14:32:54.487660632Z"
+     "end_time": "2024-10-18T14:42:28.062083199Z",
+     "start_time": "2024-10-18T14:42:28.039568786Z"
     }
    },
    "id": "be74ee92d3b0a06d"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def build_augmented_information_state_vector(actors):\n",
@@ -302,56 +302,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.526037263Z",
-     "start_time": "2024-10-18T14:32:54.487700562Z"
+     "end_time": "2024-10-18T14:42:28.062159691Z",
+     "start_time": "2024-10-18T14:42:28.039724577Z"
     }
    },
    "id": "3f79b8f7d2748f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
-   "source": [
-    "def __cumulativeTransformer(p0:np.array)->np.array:\n",
-    "    \"\"\"\n",
-    "    Given a probability array this function will compute the cumulative of such distribution.\n",
-    "    \"\"\"\n",
-    "    p = np.zeros(len(p0),dtype=float)\n",
-    "    p[0] = p0[0]\n",
-    "\n",
-    "    for i in range(1,len(p)):\n",
-    "        p[i] = p0[i] + p[i-1]\n",
-    "    \n",
-    "    return p\n",
-    "\n",
-    "def obtainState(p0:np.array)->int:\n",
-    "    \"\"\"\n",
-    "    Given a probability distribution of the state this function will\n",
-    "    produce a weighted random state.\n",
-    "    \"\"\"\n",
-    "    p = __cumulativeTransformer(p0)\n",
-    "\n",
-    "    random_state = np.random.uniform()\n",
-    "    s = 0\n",
-    "    for i in range(len(p0)):\n",
-    "        if (random_state < p[i]) and ((p[i] - p[i - 1]) > 0.0000001):\n",
-    "            s = i\n",
-    "            break           \n",
-    "    return s\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.526214671Z",
-     "start_time": "2024-10-18T14:32:54.497186438Z"
-    }
-   },
-   "id": "1ea77d57b65e2a62"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "class AgentController:\n",
@@ -407,7 +366,7 @@
     "    def update_agents_position(self):\n",
     "        for agent in self.agents:\n",
     "            actual_state = agent.getPosition()\n",
-    "            new_state = obtainState(P[actual_state].A1)\n",
+    "            new_state = Utils.obtainState(P[actual_state].A1)\n",
     "            agent.updatePosition(new_state)\n",
     "\n",
     "    def update_agents_information_state(self, new_information_state):\n",
@@ -419,8 +378,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:54.526809372Z",
-     "start_time": "2024-10-18T14:32:54.505313532Z"
+     "end_time": "2024-10-18T14:42:28.062300727Z",
+     "start_time": "2024-10-18T14:42:28.040837692Z"
     }
    },
    "id": "321981fbee05d4d6"
@@ -437,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -1027,8 +986,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T14:32:56.714617230Z",
-     "start_time": "2024-10-18T14:32:54.523324332Z"
+     "end_time": "2024-10-18T14:42:29.244961467Z",
+     "start_time": "2024-10-18T14:42:28.049453605Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
