update: Extract MultiRobotTargetSearch class

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -19,14 +19,13 @@
     "import numpy as np\n",
     "from Agent import Agent\n",
     "from GridGraph import GridGraph\n",
-    "from DTMC_Utils import DTMC_Utils as Utils\n",
-    "import time"
+    "from MultiRobotTargetSearch import MultiRobotTargetSearch"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:35.585588903Z",
-     "start_time": "2024-10-24T17:40:35.165018831Z"
+     "end_time": "2024-10-25T10:00:19.595962856Z",
+     "start_time": "2024-10-25T10:00:19.109580944Z"
     }
    },
    "id": "9a691c4742471275"
@@ -41,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:35.593750539Z",
-     "start_time": "2024-10-24T17:40:35.587795056Z"
+     "end_time": "2024-10-25T10:00:19.596393592Z",
+     "start_time": "2024-10-25T10:00:19.592436519Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -75,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:35.624791398Z",
-     "start_time": "2024-10-24T17:40:35.595379536Z"
+     "end_time": "2024-10-25T10:00:19.621022050Z",
+     "start_time": "2024-10-25T10:00:19.595329316Z"
     }
    },
    "id": "e797cec0da115198"
@@ -112,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.033519163Z",
-     "start_time": "2024-10-24T17:40:35.625519461Z"
+     "end_time": "2024-10-25T10:00:20.143945038Z",
+     "start_time": "2024-10-25T10:00:19.618077846Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
@@ -150,37 +149,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.106324266Z",
-     "start_time": "2024-10-24T17:40:36.036501282Z"
+     "end_time": "2024-10-25T10:00:20.247448638Z",
+     "start_time": "2024-10-25T10:00:20.146666806Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Transition matrix:"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "dd5041db9b8b565f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "P = Utils.build_transition_matrix(grid_graph, S)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.832538918Z",
-     "start_time": "2024-10-24T17:40:36.061313523Z"
-    }
-   },
-   "id": "118135f0be706b67"
   },
   {
    "cell_type": "markdown",
@@ -194,73 +167,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Agent ID: 1, \n",
-      "Position: 285 \n",
-      "Information state: 0.13070729511915746\n",
+      "Position: 207 \n",
+      "Information state: 0.7302130294508937\n",
       "\n",
       "Agent ID: 2, \n",
-      "Position: 382 \n",
-      "Information state: 0.5677250290816866\n",
+      "Position: 392 \n",
+      "Information state: 0.8543457320635086\n",
       "\n",
       "Agent ID: 3, \n",
-      "Position: 29 \n",
-      "Information state: 0.9563099813797661\n",
+      "Position: 378 \n",
+      "Information state: 0.08414739226636203\n",
       "\n",
       "Agent ID: 4, \n",
-      "Position: 369 \n",
-      "Information state: 0.6531770968715709\n",
+      "Position: 183 \n",
+      "Information state: 0.5357707184308876\n",
       "\n",
       "Agent ID: 5, \n",
-      "Position: 105 \n",
-      "Information state: 0.37392117570020156\n",
+      "Position: 288 \n",
+      "Information state: 0.9341194151818615\n",
       "\n",
       "Agent ID: 6, \n",
-      "Position: 374 \n",
-      "Information state: 0.7477148092712739\n",
+      "Position: 24 \n",
+      "Information state: 0.19258147702029826\n",
       "\n",
       "Agent ID: 7, \n",
-      "Position: 201 \n",
-      "Information state: 0.026789724889310418\n",
+      "Position: 310 \n",
+      "Information state: 0.43731108479729863\n",
       "\n",
       "Agent ID: 8, \n",
-      "Position: 138 \n",
-      "Information state: 0.10644437669771933\n",
+      "Position: 294 \n",
+      "Information state: 0.8841692079239729\n",
       "\n",
       "Agent ID: 9, \n",
-      "Position: 166 \n",
-      "Information state: 0.8072887111932872\n",
+      "Position: 256 \n",
+      "Information state: 0.8103423787860036\n",
       "\n",
       "Agent ID: 10, \n",
-      "Position: 231 \n",
-      "Information state: 0.8098125525409348\n",
+      "Position: 212 \n",
+      "Information state: 0.5530902259124906\n",
       "\n",
       "Agent ID: 11, \n",
-      "Position: 287 \n",
-      "Information state: 0.8399192521250646\n",
+      "Position: 380 \n",
+      "Information state: 0.777378651658251\n",
       "\n",
       "Agent ID: 12, \n",
-      "Position: 347 \n",
-      "Information state: 0.6424753278958413\n",
+      "Position: 288 \n",
+      "Information state: 0.8204738743930274\n",
       "\n",
       "Agent ID: 13, \n",
-      "Position: 64 \n",
-      "Information state: 0.9308156927496121\n",
+      "Position: 103 \n",
+      "Information state: 0.01592550497257761\n",
       "\n",
       "Agent ID: 14, \n",
-      "Position: 252 \n",
-      "Information state: 0.3255846775393778\n"
+      "Position: 46 \n",
+      "Information state: 0.8312088602355543\n"
      ]
     }
    ],
    "source": [
     "agents = []\n",
-    "\n",
     "for i in range(N):\n",
     "    initial_node = np.random.randint(0, S)\n",
     "    agent = Agent(i+1, initial_node)\n",
@@ -270,172 +242,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.844259114Z",
-     "start_time": "2024-10-24T17:40:36.835978193Z"
+     "end_time": "2024-10-25T10:00:20.248044441Z",
+     "start_time": "2024-10-25T10:00:20.180325540Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "def build_graph_laplacian(actors):\n",
-    "    matrix =  np.zeros((N, N))\n",
-    "    for ii in range(N):\n",
-    "        matrix[ii][ii] = len(actors[ii].getNeighbors(actors))\n",
-    "    for j in range(N):\n",
-    "        for l in range(N):\n",
-    "            if j != l:\n",
-    "                if actors[j].getPosition() == actors[l].getPosition():\n",
-    "                    matrix[j][l] = -1\n",
-    "                else:\n",
-    "                    matrix[j][l] = 0\n",
-    "    # print(\"Laplacian: \", matrix)\n",
-    "    return matrix"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.889077969Z",
-     "start_time": "2024-10-24T17:40:36.844118751Z"
-    }
-   },
-   "id": "be74ee92d3b0a06d"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
-   "source": [
-    "def build_augmented_information_state_vector(actors):\n",
-    "    vector = []\n",
-    "    for a in actors:\n",
-    "        vector.append(a.getInformationState())\n",
-    "    vector.append(reference_information_state)\n",
-    "    column_vector = np.array(vector).reshape(-1,1)\n",
-    "    # print(\"information vector: \", column_vector)\n",
-    "    return column_vector\n",
-    "\n",
-    "def build_transition_information_states_matrix(agent_list):\n",
-    "    L = build_graph_laplacian(agent_list)\n",
-    "    I = np.eye(N)\n",
-    "        \n",
-    "    # build d -> agent who finds the target\n",
-    "    d = []\n",
-    "    for index in range(N):\n",
-    "        if agent_list[index].getPosition() in Z_r:\n",
-    "            d.append(1)\n",
-    "        else:\n",
-    "            d.append(0)\n",
-    "    \n",
-    "    # print(\"d = \", d)\n",
-    "    # element_11 = I - alpha*L - np.diag(d)\n",
-    "    element_11 = I - alpha*L - np.diag(d)\n",
-    "    # element_12 = [-x for x in d]  \n",
-    "    element_12 = [x for x in d]  \n",
-    "    element_12_T = np.array(element_12).reshape(-1, 1)\n",
-    "    element_21 = np.zeros((1, N))\n",
-    "    element_22 = np.array([[1]])\n",
-    "    \n",
-    "    H = np.block([\n",
-    "        [element_11, element_12_T], [element_21, element_22]\n",
-    "    ])\n",
-    "    \n",
-    "    # print(\"H = \", H)\n",
-    "    return H\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.901691686Z",
-     "start_time": "2024-10-24T17:40:36.873439753Z"
-    }
-   },
-   "id": "3f79b8f7d2748f7c"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "class AgentController:\n",
-    "    \n",
-    "    def __init__(self, _agents, _graph, _reference_information_state):\n",
-    "        self.eps = 0.01\n",
-    "        self.agents = _agents\n",
-    "        self.graph = _graph\n",
-    "        self.reference_information_state = _reference_information_state\n",
-    "        self.k = 0\n",
-    "    \n",
-    "    def run(self):\n",
-    "        timer = 0\n",
-    "        start_time = time.time()\n",
-    "        while not self.check_consensus():\n",
-    "            # self.graph.plot_graph_with_agents(self.agents)\n",
-    "            H_k = build_transition_information_states_matrix(self.agents)\n",
-    "            actual_information_state_vector = build_augmented_information_state_vector(self.agents)\n",
-    "            \n",
-    "            new_information_state_vector = np.matmul(H_k, actual_information_state_vector)\n",
-    "            self.update_agents_position()\n",
-    "            self.update_agents_information_state(new_information_state_vector[:-1, :])\n",
-    "            \n",
-    "            timer+=1\n",
-    "            \n",
-    "        print(f\"Finished. Information State Vector: {build_augmented_information_state_vector(self.agents)}\")\n",
-    "        end_time = time.time()\n",
-    "        execution_time = end_time - start_time\n",
-    "        print(f\"{timer} iterazioni in {execution_time} secondi\")\n",
-    "            \n",
-    "        file_name = \"trajectories.txt\"\n",
-    "        with open(file_name, 'w') as file:\n",
-    "            stringa = \"\"\n",
-    "            for agent in self.agents:\n",
-    "                stringa += (f\"Agent {agent.id_number}: \\n State trajectory: {str(agent.getTrajectory())} \\n Information state [k]:\"\n",
-    "                            f\" {np.array(agent.getInformationStateTrajectory()).__str__()} \\n\\n\")\n",
-    "            file.write(stringa)\n",
-    "            \n",
-    "            # for _agent in self.agents:   \n",
-    "            #     sum1 = 0\n",
-    "            #     sum2 = 0\n",
-    "            #     N_ka = getNeighbors(_agent, agents)\n",
-    "            #     for b in N_ka:\n",
-    "            #         None # formula\n",
-    "            #     if _agent.getPosition() in Z_r:\n",
-    "            #         sum2 = -(_agent.getInformationState() - reference_information_state)\n",
-    "            #     \n",
-    "            #     information_state_k = _agent.getInformationState()\n",
-    "            #     _agent.updateInformationState(information_state_k + sum1 + sum2)\n",
-    "            #     print(build_graph_laplacian(self.agents))\n",
-    "            #     self.k += 1 # time\n",
-    "    \n",
-    "    def check_consensus(self):\n",
-    "        for ag in self.agents:\n",
-    "            if abs(ag.getInformationState() - self.reference_information_state) > self.eps:\n",
-    "                return False # at least one agent doesn't reach the reference state\n",
-    "        return True\n",
-    "    \n",
-    "    def update_agents_position(self):\n",
-    "        for agent in self.agents:\n",
-    "            actual_state = agent.getPosition()\n",
-    "            new_state = Utils.obtainState(P[actual_state].A1)\n",
-    "            agent.updatePosition(new_state)\n",
-    "\n",
-    "    def update_agents_information_state(self, new_information_state):\n",
-    "        for (i, information_state) in enumerate(new_information_state):\n",
-    "            # print(f\"(i, information_state) = ({i},{information_state})\")\n",
-    "            self.agents[i].updateInformationState(information_state[0])\n",
-    "            # self.agents[i].updateInformationState(max(information_state[0],0))\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:36.903032479Z",
-     "start_time": "2024-10-24T17:40:36.884039336Z"
-    }
-   },
-   "id": "321981fbee05d4d6"
   },
   {
    "cell_type": "markdown",
@@ -449,40 +260,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. Information State Vector: [[0.9937157 ]\n",
-      " [0.99272913]\n",
-      " [0.99408991]\n",
-      " [0.99717466]\n",
-      " [0.99210196]\n",
-      " [0.99521228]\n",
-      " [0.99008859]\n",
-      " [0.99504002]\n",
-      " [0.99729115]\n",
+      "Finished. Information State Vector: [[1.        ]\n",
+      " [0.99770014]\n",
+      " [0.99734903]\n",
+      " [0.99913504]\n",
+      " [0.99691506]\n",
       " [1.        ]\n",
-      " [0.99306937]\n",
-      " [0.99751608]\n",
-      " [0.99280125]\n",
-      " [0.99460329]\n",
+      " [0.99610574]\n",
+      " [0.99005294]\n",
+      " [1.        ]\n",
+      " [1.        ]\n",
+      " [0.9977127 ]\n",
+      " [1.        ]\n",
+      " [0.99731471]\n",
+      " [0.99955422]\n",
       " [1.        ]]\n",
-      "4571 iterazioni in 13.167624235153198 secondi\n"
+      "5086 iterazioni in 15.079049587249756 secondi\n"
      ]
     }
    ],
    "source": [
-    "experiment = AgentController(agents, grid_graph, reference_information_state)\n",
+    "experiment = MultiRobotTargetSearch(agents, grid_graph, reference_information_state, Z_r, alpha)\n",
     "experiment.run()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T17:40:50.089950742Z",
-     "start_time": "2024-10-24T17:40:36.900394704Z"
+     "end_time": "2024-10-25T10:00:36.616560288Z",
+     "start_time": "2024-10-25T10:00:20.196415833Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
