update: Modify project structure by adding Utils package

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -17,15 +17,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from Agent import Agent\n",
-    "from GridGraph import GridGraph\n",
+    "from Utils.Agent import Agent\n",
+    "from Utils.GridGraph import GridGraph\n",
     "from MultiRobotTargetSearch import MultiRobotTargetSearch"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:19.595962856Z",
-     "start_time": "2024-10-25T10:00:19.109580944Z"
+     "end_time": "2024-10-25T10:05:06.198326100Z",
+     "start_time": "2024-10-25T10:05:05.353634587Z"
     }
    },
    "id": "9a691c4742471275"
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:19.596393592Z",
-     "start_time": "2024-10-25T10:00:19.592436519Z"
+     "end_time": "2024-10-25T10:05:06.218102170Z",
+     "start_time": "2024-10-25T10:05:06.205846187Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:19.621022050Z",
-     "start_time": "2024-10-25T10:00:19.595329316Z"
+     "end_time": "2024-10-25T10:05:06.253895452Z",
+     "start_time": "2024-10-25T10:05:06.222540052Z"
     }
    },
    "id": "e797cec0da115198"
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:20.143945038Z",
-     "start_time": "2024-10-25T10:00:19.618077846Z"
+     "end_time": "2024-10-25T10:05:07.453092710Z",
+     "start_time": "2024-10-25T10:05:06.257305690Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
@@ -149,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:20.247448638Z",
-     "start_time": "2024-10-25T10:00:20.146666806Z"
+     "end_time": "2024-10-25T10:05:07.591077061Z",
+     "start_time": "2024-10-25T10:05:07.454342598Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -174,60 +174,60 @@
      "output_type": "stream",
      "text": [
       "Agent ID: 1, \n",
-      "Position: 207 \n",
-      "Information state: 0.7302130294508937\n",
+      "Position: 285 \n",
+      "Information state: 0.13070729511915746\n",
       "\n",
       "Agent ID: 2, \n",
-      "Position: 392 \n",
-      "Information state: 0.8543457320635086\n",
+      "Position: 382 \n",
+      "Information state: 0.5677250290816866\n",
       "\n",
       "Agent ID: 3, \n",
-      "Position: 378 \n",
-      "Information state: 0.08414739226636203\n",
+      "Position: 29 \n",
+      "Information state: 0.9563099813797661\n",
       "\n",
       "Agent ID: 4, \n",
-      "Position: 183 \n",
-      "Information state: 0.5357707184308876\n",
+      "Position: 369 \n",
+      "Information state: 0.6531770968715709\n",
       "\n",
       "Agent ID: 5, \n",
-      "Position: 288 \n",
-      "Information state: 0.9341194151818615\n",
+      "Position: 105 \n",
+      "Information state: 0.37392117570020156\n",
       "\n",
       "Agent ID: 6, \n",
-      "Position: 24 \n",
-      "Information state: 0.19258147702029826\n",
+      "Position: 374 \n",
+      "Information state: 0.7477148092712739\n",
       "\n",
       "Agent ID: 7, \n",
-      "Position: 310 \n",
-      "Information state: 0.43731108479729863\n",
+      "Position: 201 \n",
+      "Information state: 0.026789724889310418\n",
       "\n",
       "Agent ID: 8, \n",
-      "Position: 294 \n",
-      "Information state: 0.8841692079239729\n",
+      "Position: 138 \n",
+      "Information state: 0.10644437669771933\n",
       "\n",
       "Agent ID: 9, \n",
-      "Position: 256 \n",
-      "Information state: 0.8103423787860036\n",
+      "Position: 166 \n",
+      "Information state: 0.8072887111932872\n",
       "\n",
       "Agent ID: 10, \n",
-      "Position: 212 \n",
-      "Information state: 0.5530902259124906\n",
+      "Position: 231 \n",
+      "Information state: 0.8098125525409348\n",
       "\n",
       "Agent ID: 11, \n",
-      "Position: 380 \n",
-      "Information state: 0.777378651658251\n",
+      "Position: 287 \n",
+      "Information state: 0.8399192521250646\n",
       "\n",
       "Agent ID: 12, \n",
-      "Position: 288 \n",
-      "Information state: 0.8204738743930274\n",
+      "Position: 347 \n",
+      "Information state: 0.6424753278958413\n",
       "\n",
       "Agent ID: 13, \n",
-      "Position: 103 \n",
-      "Information state: 0.01592550497257761\n",
+      "Position: 64 \n",
+      "Information state: 0.9308156927496121\n",
       "\n",
       "Agent ID: 14, \n",
-      "Position: 46 \n",
-      "Information state: 0.8312088602355543\n"
+      "Position: 252 \n",
+      "Information state: 0.3255846775393778\n"
      ]
     }
    ],
@@ -242,8 +242,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:20.248044441Z",
-     "start_time": "2024-10-25T10:00:20.180325540Z"
+     "end_time": "2024-10-25T10:05:07.592405684Z",
+     "start_time": "2024-10-25T10:05:07.498870306Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
@@ -266,22 +266,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. Information State Vector: [[1.        ]\n",
-      " [0.99770014]\n",
-      " [0.99734903]\n",
-      " [0.99913504]\n",
-      " [0.99691506]\n",
+      "Finished. Information State Vector: [[0.9937157 ]\n",
+      " [0.99272913]\n",
+      " [0.99408991]\n",
+      " [0.99717466]\n",
+      " [0.99210196]\n",
+      " [0.99521228]\n",
+      " [0.99008859]\n",
+      " [0.99504002]\n",
+      " [0.99729115]\n",
       " [1.        ]\n",
-      " [0.99610574]\n",
-      " [0.99005294]\n",
-      " [1.        ]\n",
-      " [1.        ]\n",
-      " [0.9977127 ]\n",
-      " [1.        ]\n",
-      " [0.99731471]\n",
-      " [0.99955422]\n",
+      " [0.99306937]\n",
+      " [0.99751608]\n",
+      " [0.99280125]\n",
+      " [0.99460329]\n",
       " [1.        ]]\n",
-      "5086 iterazioni in 15.079049587249756 secondi\n"
+      "4571 iterazioni in 13.580785512924194 secondi\n"
      ]
     }
    ],
@@ -292,8 +292,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:00:36.616560288Z",
-     "start_time": "2024-10-25T10:00:20.196415833Z"
+     "end_time": "2024-10-25T10:05:22.651390338Z",
+     "start_time": "2024-10-25T10:05:07.550588445Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
