update: Add getter methods to MultiRobotTargetSearch class

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:06.198326100Z",
-     "start_time": "2024-10-25T10:05:05.353634587Z"
+     "end_time": "2024-10-25T12:08:28.343375405Z",
+     "start_time": "2024-10-25T12:08:27.874918731Z"
     }
    },
    "id": "9a691c4742471275"
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:06.218102170Z",
-     "start_time": "2024-10-25T10:05:06.205846187Z"
+     "end_time": "2024-10-25T12:08:28.343700851Z",
+     "start_time": "2024-10-25T12:08:28.336137943Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:06.253895452Z",
-     "start_time": "2024-10-25T10:05:06.222540052Z"
+     "end_time": "2024-10-25T12:08:28.377140368Z",
+     "start_time": "2024-10-25T12:08:28.342883558Z"
     }
    },
    "id": "e797cec0da115198"
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:07.453092710Z",
-     "start_time": "2024-10-25T10:05:06.257305690Z"
+     "end_time": "2024-10-25T12:08:28.905949560Z",
+     "start_time": "2024-10-25T12:08:28.375528044Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
@@ -149,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:07.591077061Z",
-     "start_time": "2024-10-25T10:05:07.454342598Z"
+     "end_time": "2024-10-25T12:08:28.914480940Z",
+     "start_time": "2024-10-25T12:08:28.909541591Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -242,8 +242,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:07.592405684Z",
-     "start_time": "2024-10-25T10:05:07.498870306Z"
+     "end_time": "2024-10-25T12:08:29.013776789Z",
+     "start_time": "2024-10-25T12:08:28.914038550Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
@@ -281,22 +281,56 @@
       " [0.99280125]\n",
       " [0.99460329]\n",
       " [1.        ]]\n",
-      "4571 iterazioni in 13.580785512924194 secondi\n"
+      "4571 iterazioni in 13.749037742614746 secondi\n"
      ]
     }
    ],
    "source": [
     "experiment = MultiRobotTargetSearch(agents, grid_graph, reference_information_state, Z_r, alpha)\n",
-    "experiment.run()"
+    "experiment.run()\n",
+    "print(f\"Finished. Information State Vector: {experiment.getInformationStateVector()}\")         \n",
+    "print(f\"{experiment.getIterationNumber()} iterazioni in {experiment.getExecutionTime()} secondi\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-25T10:05:22.651390338Z",
-     "start_time": "2024-10-25T10:05:07.550588445Z"
+     "end_time": "2024-10-25T12:08:43.315761768Z",
+     "start_time": "2024-10-25T12:08:28.977075836Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fb792cbfe2c1ee4c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "num_of_experiments = 10\n",
+    "N = [2,3,4,5,6,7,8,9,10,11,12]\n",
+    "average_execution_time = []\n",
+    "\n",
+    "for j in N:\n",
+    "    for i in range(num_of_experiments):\n",
+    "        count = 0\n",
+    "        \n",
+    "        "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-25T12:08:43.323238999Z",
+     "start_time": "2024-10-25T12:08:43.315508908Z"
+    }
+   },
+   "id": "fc5731d6bd49904f"
   }
  ],
  "metadata": {
