--- a/Notebooks/reference_uncertainty_analysis.ipynb
+++ b/Notebooks/reference_uncertainty_analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-23T20:42:19.009865354Z",
-     "start_time": "2024-11-23T20:42:18.962367223Z"
+     "end_time": "2024-11-24T19:51:35.615418625Z",
+     "start_time": "2024-11-24T19:51:34.732841274Z"
     }
    },
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "np.random.seed(12345)"
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-23T19:51:13.712179584Z",
-     "start_time": "2024-11-23T19:51:13.660800154Z"
+     "end_time": "2024-11-24T19:51:35.674099311Z",
+     "start_time": "2024-11-24T19:51:35.619238162Z"
     }
    },
    "id": "8d4c2cb49c8c097e"
@@ -41,77 +41,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# num_of_experiments = 1000\n",
-    "# agent_number = 5\n",
-    "# grid_dimension = 5\n",
-    "# nodesNumber = grid_dimension * grid_dimension\n",
-    "# grid_graph = GridGraph(grid_dimension, grid_dimension)\n",
-    "# \n",
-    "# alpha = 1\n",
-    "# Z_r = [4, 5, 6]\n",
-    "# reference_information_state = 1\n",
-    "# \n",
-    "# average_execution_times_noisy = np.zeros(num_of_experiments, dtype=float)\n",
-    "# average_execution_times = np.zeros(num_of_experiments, dtype=float)\n",
-    "# \n",
-    "# for i in tqdm(range(num_of_experiments)):\n",
-    "#     agents = DTMC_Utils.initAgents(agent_number, nodesNumber)\n",
-    "#     initial_positions = [a.getPosition() for a in agents]\n",
-    "#     \n",
-    "#     experiment = MultiRobotTargetSearch(agents, grid_graph, reference_information_state, Z_r, alpha)\n",
-    "#     initial_state = experiment.getInformationStateVector()\n",
-    "#     \n",
-    "#     experiment.run()\n",
-    "#     average_execution_times[i] = experiment.getMeanConsensusTime()\n",
-    "#     \n",
-    "#     for (j, a) in enumerate(agents):\n",
-    "#         a.updatePosition(initial_positions[j])\n",
-    "#         \n",
-    "#     # Noisy experiment\n",
-    "#     noisy_experiment = MultiRobotTargetSearch(agents, grid_graph, reference_information_state, Z_r, alpha, _noisy_measure=True)\n",
-    "#     noisy_experiment.update_agents_information_state(initial_state[:-1])\n",
-    "#     noisy_experiment.run()\n",
-    "#     average_execution_times_noisy[i] = noisy_experiment.getMeanConsensusTime()\n",
-    "# \n",
-    "# average_time = np.mean(average_execution_times)\n",
-    "# sd = np.std(average_execution_times)\n",
-    "# noisy_average_time = np.mean(average_execution_times_noisy)\n",
-    "# sd_noisy = np.std(average_execution_times_noisy)\n",
-    "# \n",
-    "# \n",
-    "# print(\"Mean value: \", average_time)\n",
-    "# print(\"SD: \", sd)\n",
-    "# print(\"Noisy mean value: \", noisy_average_time)\n",
-    "# print(\"sd_noisy: \", sd_noisy)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-23T19:51:13.713191422Z",
-     "start_time": "2024-11-23T19:51:13.694940241Z"
-    }
-   },
-   "id": "94a427feab18f498"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing agent counts: 100%|██████████| 8/8 [02:27<00:00, 18.42s/it]\n"
+      "Processing agent counts: 100%|██████████| 8/8 [02:51<00:00, 21.45s/it]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "# Parametri\n",
     "num_of_experiments = 1000\n",
     "grid_dimension = 5\n",
@@ -163,15 +102,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-23T19:53:41.176470601Z",
-     "start_time": "2024-11-23T19:51:13.718489416Z"
+     "end_time": "2024-11-24T19:54:27.369057389Z",
+     "start_time": "2024-11-24T19:51:35.674447491Z"
     }
    },
    "id": "91dc9bc7e2cc0a17"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -254,11 +193,97 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-23T19:53:41.698199093Z",
-     "start_time": "2024-11-23T19:53:41.175833413Z"
+     "end_time": "2024-11-24T19:54:28.307457324Z",
+     "start_time": "2024-11-24T19:54:27.368260636Z"
     }
    },
    "id": "d369eec2ada24a59"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No noise average:  [np.float64(14.818666666666665), np.float64(13.21025), np.float64(11.817800000000002), np.float64(10.412166666666668), np.float64(9.377285714285714), np.float64(8.632), np.float64(7.9158888888888885), np.float64(7.499899999999999)]\n",
+      "No noise sd:  [np.float64(10.229630513583784), np.float64(8.341072019680682), np.float64(7.034466799978517), np.float64(4.923264699927839), np.float64(4.349792673923948), np.float64(3.5843733413248127), np.float64(3.193620088802821), np.float64(2.7511324922656852)]\n",
+      "Noisy:  [np.float64(18.845333333333336), np.float64(15.5195), np.float64(13.662400000000002), np.float64(12.507), np.float64(10.999714285714287), np.float64(9.91125), np.float64(9.204), np.float64(8.494)]\n",
+      "Noisy sd:  [np.float64(12.968743209904515), np.float64(9.387438135615064), np.float64(7.819536190849173), np.float64(6.389127561725466), np.float64(5.290800633830268), np.float64(4.435580394660883), np.float64(3.9509947239450947), np.float64(3.4445034475233145)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"No noise average: \", average_execution_times_all)\n",
+    "print(\"No noise sd: \", std_execution_times_all)\n",
+    "print(\"Noisy: \", average_execution_times_noisy_all)\n",
+    "print(\"Noisy sd: \", std_execution_times_noisy_all)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-24T19:54:28.325027163Z",
+     "start_time": "2024-11-24T19:54:28.311970183Z"
+    }
+   },
+   "id": "b1c5ddddb124d11f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variazione percentuale del tempo medio di esecuzione: [np.float64(27.17293503689044), np.float64(17.480744119149904), np.float64(15.60865812587791), np.float64(20.11909144750531), np.float64(17.30168644597129), np.float64(14.81985634847082), np.float64(16.272475892368384), np.float64(13.254843397911978)]\n",
+      "Variazione percentuale della deviazione standard: [np.float64(26.77626227734718), np.float64(12.544743810693518), np.float64(11.16032548299259), np.float64(29.774203727439495), np.float64(21.6333979673895), np.float64(23.747723026571162), np.float64(23.715238947729294), np.float64(25.203110253937865)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array per memorizzare le variazioni percentuali\n",
+    "percentage_variation_average_time = []\n",
+    "percentage_variation_std_time = []\n",
+    "\n",
+    "# Loop per calcolare la variazione percentuale per ciascun numero di agenti\n",
+    "for idx in range(len(agents_list)):\n",
+    "    avg_no_noise = average_execution_times_all[idx]\n",
+    "    avg_with_noise = average_execution_times_noisy_all[idx]\n",
+    "    std_no_noise = std_execution_times_all[idx]\n",
+    "    std_with_noise = std_execution_times_noisy_all[idx]\n",
+    "\n",
+    "    # Calcolo della variazione percentuale\n",
+    "    avg_time_variation = ((avg_with_noise - avg_no_noise) / avg_no_noise) * 100\n",
+    "    std_time_variation = ((std_with_noise - std_no_noise) / std_no_noise) * 100\n",
+    "\n",
+    "    # Aggiunta ai rispettivi array\n",
+    "    percentage_variation_average_time.append(avg_time_variation)\n",
+    "    percentage_variation_std_time.append(std_time_variation)\n",
+    "\n",
+    "# Stampa i risultati\n",
+    "print(\"Variazione percentuale del tempo medio di esecuzione:\", percentage_variation_average_time)\n",
+    "print(\"Variazione percentuale della deviazione standard:\", percentage_variation_std_time)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-24T19:55:11.372533723Z",
+     "start_time": "2024-11-24T19:55:11.331699943Z"
+    }
+   },
+   "id": "1d24e6f9342e090f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a8487a99501ec07b"
   }
  ],
  "metadata": {
